# FER_computer_animation

./: CMakeLists.txt  README.md
goya/: CMakeLists.txt
goya/shaders/: basic.vs
lab1/: CMakeLists.txt
lab1/src/: main.cxx
lab2/: CMakeLists.txt
lab2/src/: main.cxx
lab3/: CMakeLists.txt
